# do-ip-updater

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: main.rs  models.rs  updater.rs
